# adobe-connect-stitcher

./: .gitignore  LICENSE.txt  README.md  audio_video_content.py  extract_content_info.py  pyproject.toml  requirements.txt  stitch.py  stitch.sh
stitcher/: __main__.py  audio_video_content.py  content_type.py  extract_content_info.py  stitch_content.py
